@@ -1367,8 +1367,8 @@ global maygc object check_funname_replacement (condition_t errtype, object calle
     pushSTACK(NIL); /* no PLACE */
     switch (errtype) {
       case type_error:
-        pushSTACK(obj);           /* TYPE-ERROR slot DATUM */
-        pushSTACK(O(type_designator_function_name)); /* slot EXPECTED-TYPE */
+        pushSTACK(obj);                   /* TYPE-ERROR slot DATUM */
+        pushSTACK(O(type_function_name)); /* slot EXPECTED-TYPE */
         break;
       case source_program_error:
         pushSTACK(obj);         /* SOURCE-PROGRAM-ERROR slot DETAIL */
